--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ main input::placeholder{
     color: #BABCBE;
 
 }
-main button{
+main button.start_btn{
     width:565px;
     height:66px;
     border-radius: 56px;
@@ -127,23 +127,45 @@ main button{
     border:none;
     box-sizing: border-box;
     margin-top:115px;
+    cursor: pointer;
 }
 main img{
     position: relative;
     top:-52px;
     left:321px;
 }
+@keyframes rotate {
+    from{
+        transform:rotate(0deg);
+    }
+    to{
+        transform:rotate(360deg);
+    }
 
+}
+.result-loading{
+    display: none;
+}
+.result-loading img{
+    width: 100px;
+    height: 100px;
+    animation: rotate 1.1s infinite linear;
+
+}
 
 .timeResult{
 
     display: none;
+    flex-direction: column;
+    align-items: center;
+}
+.timeResult div{
+    display:flex;
 }
 .timeResult a:nth-of-type(1){
     width: 356px;
     height: 66px;
     margin-top: 127px;
-    /*left: 678px*/
     padding: 21px 49px;
     border-radius: 56px;
     background-color: #FCEE21;
@@ -152,7 +174,6 @@ main img{
     font-size: 23px;
     line-height: 24px;
     text-align: center;
-    display:inline-block;
 }
 .timeResult a:nth-of-type(2){
     width: 191px;
@@ -161,7 +182,7 @@ main img{
     border-radius: 56px;
     padding: 21px 49px;
     position: relative;
-    display:inline-block;
+    margin-top: 127px;
     left:18px;
     font-family: GmarketSansMedium;
     font-weight: 700;
@@ -177,11 +198,73 @@ main img{
 .timeResult span{
     font-size: 72px;
 }
+
+/*모달*/
+#modal{
+    position:fixed;
+    top:0;
+    left:0;
+    display:none;
+    justify-content: center;
+    align-items: center;
+    z-index: 900;
+    width:100%;
+    height:100%
+}
+#modal .modalContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:800px;
+    height:800px;
+    background-color: #FFF;
+    border-radius: 30px;
+}
+.modalContainer p{
+    font-family: tvN_Enjoystories;
+    color: #5B2386;
+
+}
+.modalContainer p:nth-child(1){
+    width:396px;
+    font-size:96px;
+    font-weight:700;
+    margin:76px auto 4px;
+}
+.modalContainer p:nth-child(2){
+    width: 233px;
+    font-size:36px;
+    font-weight: 700;
+    margin:0;
+}
+.modalContainer img{
+    margin:29px auto 74px;
+}
+.modalContainer a{
+    width: 508px;
+    height:66px;
+    background-color: #FCEE21;
+    color: #5B2386;
+    font-family: GmarketSansMedium;
+    text-align: center;
+    line-height: 24px;
+    font-size: 22px;
+    font-weight: 700;
+    box-sizing: border-box;
+    padding: 21px 49px 21px 49px;
+    border-radius: 56px;
+    box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 50%);
+}
+
+
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 .notosanskr * {
     font-family: 'Noto Sans KR', sans-serif;
 }
+
+
 .copyright p{
     margin-top: 20px;
     font-family: "Noto Sans KR";
